[gd_scene load_steps=8 format=2]

[ext_resource path="res://alien-ufo-pack/PNG/shipBlue_manned.png" type="Texture" id=1]
[ext_resource path="res://1625062331495_milky_way_2695569_1920_6178.jpg" type="Texture" id=2]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=3]
[ext_resource path="res://Captura de pantalla 2022-04-02 a las 13.40.02.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 547, 415.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 32.0156

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 117.5, 39.5 )

[node name="Node2D" type="Node2D"]

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 476, 332.5 )
shape = SubResource( 1 )

[node name="1625062331495MilkyWay269556919206178" type="Sprite" parent="."]
position = Vector2( 476.5, 338 )
scale = Vector2( 1.2474, 1.38832 )
texture = ExtResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 129, 130 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
scale = Vector2( 0.5, 0.45 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0, -0.375 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D"]
position = Vector2( 0, -0.375 )
zoom = Vector2( 0.7, 0.7 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 457, 188 )

[node name="Sprite" type="Sprite" parent="Area2D"]
position = Vector2( -0.369995, -0.489998 )
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.369965, -0.489998 )
shape = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="KinematicBody2D" method="_on_Area2D_body_entered"]
