[gd_scene load_steps=52 format=2]

[ext_resource path="res://KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://godot/mtee2.gd" type="Script" id=2]
[ext_resource path="res://alien-ufo-pack/PNG/shipBlue_manned.png" type="Texture" id=3]
[ext_resource path="res://1625062331495_milky_way_2695569_1920_6178.jpg" type="Texture" id=4]
[ext_resource path="res://dirtCaveRockLarge.png" type="Texture" id=5]
[ext_resource path="res://laserRedBurst.png" type="Texture" id=6]
[ext_resource path="res://laserGreenBurst.png" type="Texture" id=7]
[ext_resource path="res://laserBlueBurst.png" type="Texture" id=8]
[ext_resource path="res://Flecha.png" type="Texture" id=9]
[ext_resource path="res://Area2D2.gd" type="Script" id=10]
[ext_resource path="res://Area2D6.gd" type="Script" id=11]
[ext_resource path="res://Area2D8.gd" type="Script" id=12]
[ext_resource path="res://Area2D7.gd" type="Script" id=13]
[ext_resource path="res://Area2D9.gd" type="Script" id=14]
[ext_resource path="res://Area2D5.gd" type="Script" id=15]
[ext_resource path="res://Area2D10.gd" type="Script" id=16]
[ext_resource path="res://Area2D11.gd" type="Script" id=17]
[ext_resource path="res://Area2D13.gd" type="Script" id=18]
[ext_resource path="res://Area2D12.gd" type="Script" id=19]
[ext_resource path="res://Area2D15.gd" type="Script" id=20]
[ext_resource path="res://Area2D16.gd" type="Script" id=21]
[ext_resource path="res://Area2D14.gd" type="Script" id=22]
[ext_resource path="res://Area2D17.gd" type="Script" id=23]
[ext_resource path="res://Area2D18.gd" type="Script" id=24]
[ext_resource path="res://Area2D21.gd" type="Script" id=25]
[ext_resource path="res://Area2D27.gd" type="Script" id=26]
[ext_resource path="res://Area2D23.gd" type="Script" id=27]
[ext_resource path="res://Area2D36.gd" type="Script" id=28]
[ext_resource path="res://Area2D39.gd" type="Script" id=29]
[ext_resource path="res://Area2D38.gd" type="Script" id=30]
[ext_resource path="res://Area2D29.gd" type="Script" id=31]
[ext_resource path="res://Area2D28.gd" type="Script" id=32]
[ext_resource path="res://Area2D25.gd" type="Script" id=33]
[ext_resource path="res://Area2D24.gd" type="Script" id=34]
[ext_resource path="res://Area2D40.gd" type="Script" id=35]
[ext_resource path="res://Area2D31.gd" type="Script" id=36]
[ext_resource path="res://Area2D26.gd" type="Script" id=37]
[ext_resource path="res://Area2D19.gd" type="Script" id=38]
[ext_resource path="res://Area2D22.gd" type="Script" id=39]
[ext_resource path="res://Area2D30.gd" type="Script" id=40]
[ext_resource path="res://Area2D37.gd" type="Script" id=41]
[ext_resource path="res://Area2D34.gd" type="Script" id=42]
[ext_resource path="res://Area2D32.gd" type="Script" id=43]
[ext_resource path="res://Area2D33.gd" type="Script" id=44]
[ext_resource path="res://Area2D35.gd" type="Script" id=45]
[ext_resource path="res://Area2D20.gd" type="Script" id=46]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 1175.25, 482.25 )

[sub_resource type="CircleShape2D" id=6]
radius = 11.0

[sub_resource type="CircleShape2D" id=5]
radius = 32.0156

[sub_resource type="CircleShape2D" id=8]
radius = 34.3657

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [ -232.0 ]
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1154.75, 384.75 )
shape = SubResource( 7 )

[node name="1625062331495MilkyWay269556919206178" type="Sprite" parent="."]
position = Vector2( 629, 685 )
scale = Vector2( 2.84583, 2.85635 )
texture = ExtResource( 4 )

[node name="Flecha" type="Sprite" parent="."]
position = Vector2( 240.409, 159.265 )
rotation = 0.174533
scale = Vector2( 0.501885, 0.438961 )
texture = ExtResource( 9 )

[node name="Area2D3" type="Area2D" parent="."]
position = Vector2( 103, 7 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D3"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 129, 130 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
scale = Vector2( 0.5, 0.45 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0, -0.375 )
shape = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D"]
position = Vector2( 0, -0.375 )
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="Area2D4" type="Area2D" parent="."]
position = Vector2( 1698, 358 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
position = Vector2( -0.5, -0.5 )
scale = Vector2( 1, 1 )
shape = SubResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Area2D4"]
position = Vector2( -3.25, -3.25 )
scale = Vector2( 1.99286, 1.76429 )
frames = SubResource( 9 )
frame = 1
speed_scale = 5.0
playing = true

[node name="Area2D5" type="Area2D" parent="."]
script = ExtResource( 15 )

[node name="Sprite" type="Sprite" parent="Area2D5"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D5"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D6" type="Area2D" parent="."]
script = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="Area2D6"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D6"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D7" type="Area2D" parent="."]
script = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="Area2D7"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D7"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D8" type="Area2D" parent="."]
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="Area2D8"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D8"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D9" type="Area2D" parent="."]
script = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="Area2D9"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D9"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D10" type="Area2D" parent="."]
script = ExtResource( 16 )

[node name="Sprite" type="Sprite" parent="Area2D10"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D10"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D11" type="Area2D" parent="."]
script = ExtResource( 17 )

[node name="Sprite" type="Sprite" parent="Area2D11"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D11"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D12" type="Area2D" parent="."]
script = ExtResource( 19 )

[node name="Sprite" type="Sprite" parent="Area2D12"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D12"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D13" type="Area2D" parent="."]
script = ExtResource( 18 )

[node name="Sprite" type="Sprite" parent="Area2D13"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D13"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D14" type="Area2D" parent="."]
script = ExtResource( 22 )

[node name="Sprite" type="Sprite" parent="Area2D14"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D14"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D15" type="Area2D" parent="."]
script = ExtResource( 20 )

[node name="Sprite" type="Sprite" parent="Area2D15"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D15"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D16" type="Area2D" parent="."]
script = ExtResource( 21 )

[node name="Sprite" type="Sprite" parent="Area2D16"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D16"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D17" type="Area2D" parent="."]
script = ExtResource( 23 )

[node name="Sprite" type="Sprite" parent="Area2D17"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D17"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D18" type="Area2D" parent="."]
script = ExtResource( 24 )

[node name="Sprite" type="Sprite" parent="Area2D18"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D18"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D19" type="Area2D" parent="."]
script = ExtResource( 38 )

[node name="Sprite" type="Sprite" parent="Area2D19"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D19"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D20" type="Area2D" parent="."]
script = ExtResource( 46 )

[node name="Sprite" type="Sprite" parent="Area2D20"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D20"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D21" type="Area2D" parent="."]
script = ExtResource( 25 )

[node name="Sprite" type="Sprite" parent="Area2D21"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D21"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D22" type="Area2D" parent="."]
script = ExtResource( 39 )

[node name="Sprite" type="Sprite" parent="Area2D22"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D22"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D23" type="Area2D" parent="."]
script = ExtResource( 27 )

[node name="Sprite" type="Sprite" parent="Area2D23"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D23"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D24" type="Area2D" parent="."]
script = ExtResource( 34 )

[node name="Sprite" type="Sprite" parent="Area2D24"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D24"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D25" type="Area2D" parent="."]
script = ExtResource( 33 )

[node name="Sprite" type="Sprite" parent="Area2D25"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D25"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D26" type="Area2D" parent="."]
script = ExtResource( 37 )

[node name="Sprite" type="Sprite" parent="Area2D26"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D26"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D27" type="Area2D" parent="."]
script = ExtResource( 26 )

[node name="Sprite" type="Sprite" parent="Area2D27"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D27"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D28" type="Area2D" parent="."]
script = ExtResource( 32 )

[node name="Sprite" type="Sprite" parent="Area2D28"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D28"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D29" type="Area2D" parent="."]
script = ExtResource( 31 )

[node name="Sprite" type="Sprite" parent="Area2D29"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D29"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D30" type="Area2D" parent="."]
script = ExtResource( 40 )

[node name="Sprite" type="Sprite" parent="Area2D30"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D30"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D31" type="Area2D" parent="."]
script = ExtResource( 36 )

[node name="Sprite" type="Sprite" parent="Area2D31"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D31"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D32" type="Area2D" parent="."]
script = ExtResource( 43 )

[node name="Sprite" type="Sprite" parent="Area2D32"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D32"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D33" type="Area2D" parent="."]
script = ExtResource( 44 )

[node name="Sprite" type="Sprite" parent="Area2D33"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D33"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D34" type="Area2D" parent="."]
script = ExtResource( 42 )

[node name="Sprite" type="Sprite" parent="Area2D34"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D34"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D35" type="Area2D" parent="."]
script = ExtResource( 45 )

[node name="Sprite" type="Sprite" parent="Area2D35"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D35"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D36" type="Area2D" parent="."]
script = ExtResource( 28 )

[node name="Sprite" type="Sprite" parent="Area2D36"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D36"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D37" type="Area2D" parent="."]
script = ExtResource( 41 )

[node name="Sprite" type="Sprite" parent="Area2D37"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D37"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D38" type="Area2D" parent="."]
script = ExtResource( 30 )

[node name="Sprite" type="Sprite" parent="Area2D38"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D38"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D39" type="Area2D" parent="."]
script = ExtResource( 29 )

[node name="Sprite" type="Sprite" parent="Area2D39"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D39"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D40" type="Area2D" parent="."]
script = ExtResource( 35 )

[node name="Sprite" type="Sprite" parent="Area2D40"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D40"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D41" type="Area2D" parent="."]
script = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="Area2D41"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D41"]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[connection signal="body_exited" from="Area2D" to="KinematicBody2D" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Area2D3" to="KinematicBody2D" method="_on_Area2D3_body_entered"]
[connection signal="body_entered" from="Area2D4" to="KinematicBody2D" method="_on_Area2D4_body_entered"]
[connection signal="body_entered" from="Area2D5" to="KinematicBody2D" method="_on_Area2D5_body_entered"]
[connection signal="body_entered" from="Area2D6" to="KinematicBody2D" method="_on_Area2D6_body_entered"]
[connection signal="body_entered" from="Area2D7" to="KinematicBody2D" method="_on_Area2D7_body_entered"]
[connection signal="body_entered" from="Area2D8" to="KinematicBody2D" method="_on_Area2D8_body_entered"]
[connection signal="body_entered" from="Area2D9" to="KinematicBody2D" method="_on_Area2D9_body_entered"]
[connection signal="body_entered" from="Area2D10" to="KinematicBody2D" method="_on_Area2D10_body_entered"]
[connection signal="body_entered" from="Area2D11" to="KinematicBody2D" method="_on_Area2D11_body_entered"]
[connection signal="body_entered" from="Area2D12" to="KinematicBody2D" method="_on_Area2D12_body_entered"]
[connection signal="body_entered" from="Area2D13" to="KinematicBody2D" method="_on_Area2D13_body_entered"]
[connection signal="body_entered" from="Area2D14" to="KinematicBody2D" method="_on_Area2D14_body_entered"]
[connection signal="body_entered" from="Area2D15" to="KinematicBody2D" method="_on_Area2D15_body_entered"]
[connection signal="body_entered" from="Area2D16" to="KinematicBody2D" method="_on_Area2D16_body_entered"]
[connection signal="body_entered" from="Area2D17" to="KinematicBody2D" method="_on_Area2D17_body_entered"]
[connection signal="body_entered" from="Area2D18" to="KinematicBody2D" method="_on_Area2D18_body_entered"]
[connection signal="body_entered" from="Area2D19" to="KinematicBody2D" method="_on_Area2D19_body_entered"]
[connection signal="body_entered" from="Area2D20" to="KinematicBody2D" method="_on_Area2D20_body_entered"]
[connection signal="body_entered" from="Area2D21" to="KinematicBody2D" method="_on_Area2D21_body_entered"]
[connection signal="body_entered" from="Area2D22" to="KinematicBody2D" method="_on_Area2D22_body_entered"]
[connection signal="body_entered" from="Area2D23" to="KinematicBody2D" method="_on_Area2D23_body_entered"]
[connection signal="body_entered" from="Area2D24" to="KinematicBody2D" method="_on_Area2D24_body_entered"]
[connection signal="body_entered" from="Area2D25" to="KinematicBody2D" method="_on_Area2D25_body_entered"]
[connection signal="body_entered" from="Area2D26" to="KinematicBody2D" method="_on_Area2D26_body_entered"]
[connection signal="body_entered" from="Area2D27" to="KinematicBody2D" method="_on_Area2D27_body_entered"]
[connection signal="body_entered" from="Area2D28" to="KinematicBody2D" method="_on_Area2D28_body_entered"]
[connection signal="body_entered" from="Area2D29" to="KinematicBody2D" method="_on_Area2D29_body_entered"]
[connection signal="body_entered" from="Area2D30" to="KinematicBody2D" method="_on_Area2D30_body_entered"]
[connection signal="body_entered" from="Area2D31" to="KinematicBody2D" method="_on_Area2D31_body_entered"]
[connection signal="body_entered" from="Area2D32" to="KinematicBody2D" method="_on_Area2D32_body_entered"]
[connection signal="body_entered" from="Area2D33" to="KinematicBody2D" method="_on_Area2D33_body_entered"]
[connection signal="body_entered" from="Area2D34" to="KinematicBody2D" method="_on_Area2D34_body_entered"]
[connection signal="body_entered" from="Area2D35" to="KinematicBody2D" method="_on_Area2D35_body_entered"]
[connection signal="body_entered" from="Area2D36" to="KinematicBody2D" method="_on_Area2D36_body_entered"]
[connection signal="body_entered" from="Area2D37" to="KinematicBody2D" method="_on_Area2D37_body_entered"]
[connection signal="body_entered" from="Area2D38" to="KinematicBody2D" method="_on_Area2D38_body_entered"]
[connection signal="body_entered" from="Area2D39" to="KinematicBody2D" method="_on_Area2D39_body_entered"]
[connection signal="body_entered" from="Area2D40" to="KinematicBody2D" method="_on_Area2D40_body_entered"]
[connection signal="body_entered" from="Area2D41" to="KinematicBody2D" method="_on_Area2D2_body_entered"]
